--- a/_config.yml
+++ b/_config.yml
@@ -16,22 +16,26 @@
 title: Arduino Tests
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "quatlus_blog" # the subpath of your site, e.g. /blog
+  Playing around with the Arduino.
+baseurl: "" # "quatlus_blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: ""
+github_username:  Quatlus
 
 # Build settings
 markdown: kramdown
-theme: minima
-#theme: jekyll-swiss
-
+#theme: minima
+theme: jekyll-swiss
+theme_color: black
 plugins:
   - jekyll-feed
 
+
+defaults:
+  - scope:
+      path: "media/"
+    values:
+      image: true
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
