--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Arduino Tests
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Playing around with the Arduino.
-baseurl: "quatlus_blog" # "" the subpath of your site, e.g. /blog
+baseurl:  "" #"quatlus_blog" #the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  Quatlus
